--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "htmlmin": "^0.0.7",
     "imagemin-guetzli": "^1.0.0",
     "jquery": "^3.2.1",
+    "jquery.cookie": "^1.4.1",
     "jslint": "^0.11.0",
     "modernizr": "^3.5.0",
     "modernizr-webpack-plugin": "^1.0.6",
